improve custom model selection ux

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,7 @@
 OPENAI_KEY=
 PORT=3080
 NODE_ENV=development
-mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0="mongodb://127.0.0.1:27017/chatgpt-client"
+# Change this to your MongoDB URI if different and I recommend appending chatgpt-clone
+mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0="mongodb://127.0.0.1:27017/chatgpt-clone"
 CHATGPT_TOKEN=""
 BING_TOKEN=""
