--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,13 @@
 OPENAI_KEY=
+HOST=
 PORT=3080
 NODE_ENV=development
+
 # Change this to your MongoDB URI if different and I recommend appending chatgpt-clone
 mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0="mongodb://127.0.0.1:27017/chatgpt-clone"
+
+# Change this to proxy any request.
+PROXY=
+
 CHATGPT_TOKEN=""
 BING_TOKEN=""
