feat: add sample multi-user support feat: update README

--- a/api/.env.example
+++ b/api/.env.example
@@ -20,3 +20,10 @@ mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appNam
 OPENAI_KEY=
 CHATGPT_TOKEN=
 BING_TOKEN=
+
+# User System
+
+# global enable/disable the sample user system.
+# this is not a ready to use user system.
+# dont't use it, unless you can write your own code.
+ENABLE_USER_SYSTEM=
