--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - HOST=0.0.0.0
       - NODE_ENV=production
       - mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0=mongodb://mongodb:27017/chatgpt-clone
+      - MEILI_HOST=http://meilisearch:7700
+      - MEILI_HTTP_ADDR=meilisearch:7700
     volumes:
       - /client/node_modules
       - ./api:/api
@@ -48,5 +50,8 @@ services:
       - 7700:7700
     env_file:
       - ./api/.env
+    environment:
+      - MEILI_HOST=http://meilisearch:7700
+      - MEILI_HTTP_ADDR=meilisearch:7700
     volumes:
       - ./meili_data:/meili_data
