feat(api): add support for user-provided OpenAI API key (#311)
- Add support for user-provided OpenAI API key by setting OPENAI_KEY to
  "user_provided" in .env.example
- Pass oaiApiKey to titleConvo function in titleConvo.js
- Pass oaiApiKey to askClient function in askOpenAI.js
- Modify openAI object in endpoints.js to include userProvide property
  based on whether OPENAI_KEY is set to "user_provided" or not.

--- a/api/.env.example
+++ b/api/.env.example
@@ -24,7 +24,8 @@ mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appNam
 ##########################
 
 # Access key from OpenAI platform. 
-# Leave it blank to disable this feature. 
+# Leave it blank to disable this feature.
+# Set to "user_provided" to allow the user to provide their API key from the UI.
 OPENAI_KEY=
 
 # Identify the available models, separated by commas *without spaces*. 
