--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -22,6 +22,8 @@ services:
       - mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0=mongodb://mongodb:27017/LibreChat
       - MEILI_HOST=http://meilisearch:7700
       - MEILI_HTTP_ADDR=meilisearch:7700
+    volumes:
+      - ./images:/app/client/public/images
   client:
     build:
       context: .
