🚫🔍 feat: disallow search indexing (#1409)
* feat: disallow search indexing

* Update index.js

* Update .env.example

* added middleware

--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,12 @@ mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appNam
 DOMAIN_CLIENT=http://localhost:3080
 DOMAIN_SERVER=http://localhost:3080
 
+NO_INDEX=true
+
 #===============#
 # Debug Logging #
 #===============#
+
 DEBUG_LOGGING=true
 DEBUG_CONSOLE=false
 
