🧪 ci: Add `.env.test` for `backend-review.yml` (#2501)
* 🧪 ci: Add `.env.test` for `backend-review.yml`

* chore: touch example file

--- a/api/test/.env.test.example
+++ b/api/test/.env.test.example
@@ -1,4 +1,4 @@
-# Test database. You can use your actual mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0 if you don't mind it potentially including test data.
+# Test DB URI. You can use your actual mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0 if you don't mind it potentially including test data.
 mongodb+srv://info_db_user:DJURZlEOSVVzqJws@cluster0.bm1zura.mongodb.net/?appName=Cluster0=mongodb://127.0.0.1:27017/chatgpt-jest
 
 # Credential encryption/decryption for testing
